# mockall

./: .cirrus.yml  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.lock.ci  Cargo.lock.msrv  Cargo.toml  README.md  clippy.toml  release.toml
.github/workflows/: audit.yml  ci.yml  email.yml
mockall/: Cargo.toml  build.rs
mockall/examples/: call-from-c.rs  ffi.rs  serde.rs  synchronization.rs
mockall/src/: examples.rs  expectation.rs  lib.rs  omnimock.rs
mockall/tests/: anyhow.rs  auto_enum.rs  automock_associated_const.rs  automock_associated_type_constructor.rs  automock_associated_types.rs  automock_associated_types_with_qself.rs  automock_async_trait.rs  automock_attrs.rs  automock_auto_impl.rs  automock_boxed_constructor.rs  automock_clippy_expect.rs  automock_concrete_struct_with_generic_trait.rs  automock_concretize.rs  automock_concretize_closures.rs  automock_const_generic_struct.rs  automock_const_generic_struct_with_static_method.rs  automock_const_generic_trait.rs  automock_constructor_impl_trait.rs  automock_constructor_in_generic_trait.rs  automock_constructor_in_struct.rs  automock_constructor_in_trait.rs  automock_constructor_in_trait_with_args.rs  automock_constructor_with_args.rs  automock_consume_arguments.rs  automock_custom_result.rs  automock_debug.rs  automock_deref.rs  automock_display_over_debug.rs  automock_elided_lifetime.rs  automock_expect_wrong_const_generic.rs  automock_extern_std.rs  automock_foreign_c.rs  automock_foreign_c_returning_unit.rs  automock_foreign_c_variadic.rs  automock_foreign_extern.rs  automock_foreign_nonpub.rs  automock_foreign_rust.rs  automock_gat.rs  automock_generic_arguments.rs  automock_generic_arguments_returning_references.rs  (+173 more)
mockall/tools/: allgen.sh  gen.sh
mockall_derive/: Cargo.toml  README.md  build.rs
mockall_derive/src/: automock.rs  collections.rs  expectation.rs  lib.rs  manual_mock.rs  mock.rs  mock_function.rs  mock_item.rs  mock_item_struct.rs  mock_item_trait_impl.rs  mock_trait.rs  mockable_item.rs  mockable_struct.rs  mockable_trait_impl.rs  test_double.rs
mockall_derive/tests/: automock.rs  mock.rs  test.rs
mockall_double/: CHANGELOG.md  Cargo.toml  README.md
mockall_double/src/: lib.rs
mockall_examples/: Cargo.toml
mockall_examples/src/: lib.rs
