[package]
name = "mockall_derive"
version = "0.5.1"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asomers/mockall"
categories = ["development-tools::testing"]
keywords = ["mock", "mocking", "testing"]
documentation = "https://docs.rs/mockall_derive"
edition = "2018"
description = """
Procedural macros for Mockall
"""

[package.metadata.docs.rs]
features = ["extra-docs"]

[lib]
proc-macro = true

[features]
# Extra features for the nightly compiler only
# Must have a different name than the corresponding feature in mockall in order
# to catch hygiene violations.
nightly_derive = ["proc-macro2/nightly"]
# For building documentation only; no functional change to the library.
extra-docs = []

[dependencies]
cfg-if = "0.1.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.3", features = ["extra-traits", "full"] }

[dev-dependencies]
pretty_assertions = "0.5"
