[package]
name = "mockall_double"
version = "0.3.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asomers/mockall"
categories = ["development-tools::testing"]
keywords = ["mock", "mocking", "testing"]
documentation = "https://docs.rs/mockall_double"
edition = "2021"
description = """
Test double adapter for Mockall
"""

[lib]
proc-macro = true

[features]
nightly = ["proc-macro2/nightly"]

[dependencies]
cfg-if = "1.0"
proc-macro2 = "1.0.60"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
