[package]
name = "mockall_double"
version = "0.3.1"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asomers/mockall"
categories = ["development-tools::testing"]
keywords = ["mock", "mocking", "testing"]
documentation = "https://docs.rs/mockall_double"
edition = "2021"
description = """
Test double adapter for Mockall
"""

[lib]
proc-macro = true

[package.metadata.release]
tag-prefix = "mockall_double-"
pre-release-replacements = [
    { file="README.md", search="mockall_double = \"[a-z0-9\\.-]+\"", replace="mockall_double = \"{{version}}\""} ,
    { file="CHANGELOG.md", search="Unreleased", replace="{{version}}" },
    { file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}" }
]

[features]
nightly = ["proc-macro2/nightly"]

[dependencies]
cfg-if = "1.0"
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
